[package]
name = "surface-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
analytics = { path = "../analytics" }
anki-sync = { path = "../anki-sync" }
common = { path = "../common" }
database = { path = "../database" }
generator = { path = "../generator" }
indexer = { path = "../indexer" }
jobs = { path = "../jobs" }
obsidian = { path = "../obsidian" }
search = { path = "../search" }
surface-contracts = { path = "../surface-contracts" }
taxonomy = { path = "../taxonomy" }
validation = { path = "../validation" }

async-trait = { workspace = true }
chrono = { workspace = true }
qdrant-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
