[package]
name = "validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
card = { path = "../card" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
regex = "1"
once_cell = "1"

[dev-dependencies]
serde_json = "1"
