[package]
name = "validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
card = { path = "../card" }
taxonomy = { path = "../taxonomy" }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
